commented Desktop code